<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundViewColor"
    tools:context=".ui.activities.SettingsActivity">

    <FrameLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/backgroundViewColor"
        android:stateListAnimator="@animator/titlebar_elevaton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:background="?selectableItemBackgroundBorderless"
                android:backgroundTint="?backgroundViewColor"
                android:scaleType="center"
                android:src="@drawable/ic_arrow_back"
                android:tint="?android:textColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UseAppTint" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/settings"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/back"
                app:layout_constraintStart_toEndOf="@+id/back"
                app:layout_constraintTop_toTopOf="@+id/back" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/theme"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17">

        <RadioButton
            android:id="@+id/radio_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="?android:textColor"
            android:text="@string/white_theme"
            android:textColor="?android:textColor" />

        <RadioButton
            android:id="@+id/radio_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="?android:textColor"
            android:text="@string/dark_theme"
            android:textColor="?android:textColor" />

        <RadioButton
                android:id="@+id/radio_auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="?android:textColor"
                android:text="@string/follow_system_theme"
                android:textColor="?android:textColor" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18">

        <RadioButton
            android:id="@+id/radio_minute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="?android:textColor"
            android:text="@string/relative_time"
            android:textColor="?android:textColor" />

        <RadioButton
            android:id="@+id/radio_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="?android:textColor"
            android:text="@string/absolute_time"
            android:textColor="?android:textColor" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/arrival_time"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>