<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:paddingLeft="24dp"
    android:paddingTop="20dp"
    android:paddingRight="24dp">

    <TextView
        android:id="@+id/posted_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/posted_time" />


    <RelativeLayout
        android:id="@+id/rl_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/logo_small_lpp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="13dp"
        android:layout_toEndOf="@+id/rl_icon"
        android:text="@string/lpp_main_name"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/post_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_icon"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="vsebina" />

    <TextView
        android:id="@+id/tv_click_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/post_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:text="@string/click_for_more"
        android:textSize="14sp" />

    <View
        android:id="@+id/top_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/tv_click_more"
        android:layout_marginTop="20dp"
        android:background="@android:color/black"
        android:backgroundTint="?dividerColor" />

</RelativeLayout>