<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/stretched_circle"
        android:backgroundTint="?backgroundViewColor"
        android:elevation="2dp"
        android:padding="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:indeterminateTint="?android:textColor" />

        <TextView
            android:id="@+id/loading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:text="@string/loading"
            android:textAllCaps="false"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/msg_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        android:padding="2dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/msg_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:background="@drawable/stretched_circle"
            android:backgroundTint="?backgroundViewColor"
            android:elevation="2dp"
            android:padding="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:visibility="visible">

            <ImageView
                android:id="@+id/msg_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:tint="?android:textColor"
                app:srcCompat="@drawable/ic_wifi_off_24px" />

            <TextView
                android:id="@+id/msg_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:text="@string/unknown_error"
                android:textAllCaps="false"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/refresh_button_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:background="@drawable/stretched_circle"
            android:backgroundTint="?backgroundViewColor"
            android:elevation="2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/refresh_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackgroundBorderless"
                android:padding="6dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/refresh"
                android:textAllCaps="false" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>